gobmkida/g3/get_next_move_from_list
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/get_next_move_from_list/src/engine/owl.c:3553:16: error: expected identifier or '('
struct pattern = pattern_list[v10].pattern; 
               ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/get_next_move_from_list/src/engine/owl.c:3579:31: error: expected expression
if ( v24 <= value && ( v20 >= struct pattern || v24 != value) ) 
                              ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/get_next_move_from_list/src/engine/owl.c:3581:13: error: expected expression
if ( v20 != struct pattern || v19 >= move ) 
            ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/get_next_move_from_list/src/engine/owl.c:3587:16: error: expected identifier or '('
struct pattern = v20; 
               ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/get_next_move_from_list/src/engine/owl.c:3590:13: error: use of undeclared identifier 'matched_pattern_data'
v17[-1] = ( matched_pattern_data)_mm_loadu_si128( v13); 
            ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/get_next_move_from_list/src/engine/owl.c:3591:4: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v13->m128i_i64[1] = v23; 
~~~^ ~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/get_next_move_from_list/src/engine/owl.c:3592:4: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v13->m128i_i64[0] = _mm_unpacklo_epi32( v21, v22).m128i_u64[0]; 
~~~^ ~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/get_next_move_from_list/src/engine/owl.c:3592:50: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v13->m128i_i64[0] = _mm_unpacklo_epi32( v21, v22).m128i_u64[0]; 
                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/get_next_move_from_list/src/engine/owl.c:3602:11: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
move = v13->m128i_i32[0]; 
       ~~~^ ~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/get_next_move_from_list/src/engine/owl.c:3604:16: error: expected identifier or '('
struct pattern = ( struct pattern *)v13->m128i_i64[1]; 
               ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/get_next_move_from_list/src/engine/owl.c:3662:52: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
if ( !check_pattern_hard( move, color, pattern, v13->m128i_i32[1]) ) 
                                                ~~~^ ~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/get_next_move_from_list/src/engine/owl.c:3735:73: error: member reference base type '__attribute__((__vector_size__(4 * sizeof(int)))) int' (vector of 4 'int' values) is not a structure or union
*( _QWORD *)&list->used = _mm_shuffle_epi32( _mm_cvtsi32_si128( v26), 0).m128i_u64[0]; 
                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
12 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/get_next_move_from_list/src/obj/1/owl.o] Error 1
